--- a/Lab 1 Intro/pull-quote.html
+++ b/Lab 1 Intro/pull-quote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Using Functions</title>
-    <link href="/Content/TMMsite.css" rel="stylesheet">
+    <link href="../Content/TMMsite.css" rel="stylesheet">
     <style>
         .pullquote {
             float: right;
