--- a/Lab 1 Intro/pull-quote.html
+++ b/Lab 1 Intro/pull-quote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Using Functions</title>
-    <link href="../Content/TMMsite.css" rel="stylesheet">
+    <link href="../Content/site.css" rel="stylesheet">
     <style>
         .pullquote {
             float: right;
@@ -23,7 +23,7 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <p class="logo">JavaScript <i>&</i> jQuery</p>
+            <p class="logo">jQuery</p>
         </div>
         <div class="content">
             <div class="main">
