--- a/Solutions/Lab 2 Events/events_intro.html
+++ b/Solutions/Lab 2 Events/events_intro.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Introducing Events</title>
-  <link href="../Content/TMMsite.css" rel="stylesheet" />
+  <link href="../../Content/site.css" rel="stylesheet" />
+  <script src="../../Content/jquery.min.js" defer></script>
+  <script src="events.js" defer></script>
 </head>
 
 <body>
@@ -24,7 +26,7 @@
           <fieldset>
             <legend>A Form</legend>
             <p>
-              <button id="button">A Button</button>
+              <button id="button" >A Button</button>
             </p>
             <p>
               <input name="textfield" type="text">
