--- a/Solutions/Lab 2 Events/faq.html
+++ b/Solutions/Lab 2 Events/faq.html
@@ -20,6 +20,8 @@
       margin-left: 25px;
     }
   </style>
+  <script src="../../Content/jquery.min.js" defer></script>
+  <script src="faq.js" defer></script>
 </head>
 
 <body>
