Added Lab 3 solution

--- a/Lab 3 Animation/animate.html
+++ b/Lab 3 Animation/animate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>A Slide In Dashboard</title>
-    <link href="/Content/TMMsite.css" rel="stylesheet">
+    <link href="../Content/site.css" rel="stylesheet">
     <style>
         #dashboard {
             width: 70px;
@@ -19,19 +19,12 @@
                 border: 1px solid rgb(0,0,0);
             }
     </style>
-    <script src="/Scripts/jquery-1.6.3.min.js"></script>
-
-    <script>
-        $(document).ready(function () {
-
-        }); // end ready
-    </script>
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
             <p class="logo">
-                JavaScript <i>&</i> jQuery
+                jQuery
             </p>
         </div>
         <div id="dashboard">
