--- a/Solutions/Lab 3 Animation/signup.html
+++ b/Solutions/Lab 3 Animation/signup.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Slide in Login Screen</title>
-  <link href="../Content/site.css" rel="stylesheet">
+  <link href="../../Content/site.css" rel="stylesheet">
+  <script src="../../Content/jquery.min.js" defer></script>
+  <script src="signup.js" defer></script>
   <style>
     #login {
       width: 300px;
