--- a/Solutions/Lab 4 Common Tasks/rollover.html
+++ b/Solutions/Lab 4 Common Tasks/rollover.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rollover Images</title>
-  <link href="../Content/site.css" rel="stylesheet">
+  <link href="../../Content/site.css" rel="stylesheet">
   <style>
     #gallery img {
       display: inline-block;
@@ -12,6 +12,8 @@
       border: 1px solid rgb(0, 0, 0);
     }
   </style>
+  <script src="../../Content/jquery.min.js" defer></script>
+  <script src="rollover.js" defer></script>
 </head>
 
 <body>
@@ -26,18 +28,18 @@
         <h1>Rollover Images</h1>
         <p>Mouse over the images below</p>
         <div id="gallery">
-          <a href="../Content/Images/large/blue.jpg">
-            <img src="../Content/Images/small/blue.jpg" width="70" height="70" alt="blue"></a>
-          <a href="../Content/Images/large/green.jpg">
-            <img src="../Content/Images/small/green.jpg" width="70" height="70" alt="green"></a>
-          <a href="../Content/Images/large/orange.jpg">
-            <img src="../Content/Images/small/orange.jpg" width="70" height="70" alt="orange"></a>
-          <a href="../Content/Images/large/purple.jpg">
-            <img src="../Content/Images/small/purple.jpg" width="70" height="70" alt="purple"></a>
-          <a href="../Content/Images/large/red.jpg">
-            <img src="../Content/Images/small/red.jpg" width="70" height="70" alt="red"></a>
-          <a href="../Content/Images/large/yellow.jpg">
-            <img src="../Content/Images/small/yellow.jpg" width="70" height="70" alt="yellow"></a>
+          <a href="../../Content/Images/large/blue.jpg">
+            <img src="../../Content/Images/small/blue.jpg" width="70" height="70" alt="blue"></a>
+          <a href="../../Content/Images/large/green.jpg">
+            <img src="../../Content/Images/small/green.jpg" width="70" height="70" alt="green"></a>
+          <a href="../../Content/Images/large/orange.jpg">
+            <img src="../../Content/Images/small/orange.jpg" width="70" height="70" alt="orange"></a>
+          <a href="../../Content/Images/large/purple.jpg">
+            <img src="../../Content/Images/small/purple.jpg" width="70" height="70" alt="purple"></a>
+          <a href="../../Content/Images/large/red.jpg">
+            <img src="../../Content/Images/small/red.jpg" width="70" height="70" alt="red"></a>
+          <a href="../../Content/Images/large/yellow.jpg">
+            <img src="../../Content/Images/small/yellow.jpg" width="70" height="70" alt="yellow"></a>
         </div>
       </div>
     </div>
