Added Lab 5 solution

--- a/Lab 5 Forms/form.html
+++ b/Lab 5 Forms/form.html
@@ -3,19 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Form Fun</title>
-    <link href="/Content/TMMsite.css" rel="stylesheet">
-    <script src="/Scripts/jquery-1.6.3.min.js"></script>
-    <script>
-        $(document).ready(function () {
-
-        }); // end ready
-    </script>
+    <link href="../Content/site.css" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
         <div class="header">
             <p class="logo">
-                JavaScript <i>&</i> jQuery
+                jQuery
             </p>
         </div>
         <div class="content">
