Added Lab 6 solution

--- a/Solutions/Lab 6 Ajax/MovieData.html
+++ b/Solutions/Lab 6 Ajax/MovieData.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Movie data</title>
-  <link href="../Content/site.css" rel="stylesheet">
+  <link href="../../Content/site.css" rel="stylesheet">
+  <script src="../../Content/jquery.min.js" defer></script>
+  <script src="MovieData.js" defer></script>
 </head>
 
 <body>
