Cleaned up unneeded files

--- a/Lab 2 Events/Starter/events_intro.html
+++ b/Lab 2 Events/Starter/events_intro.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Introducing Events</title>
-  <link href="../Content/TMMsite.css" rel="stylesheet" />
+  <link href="../../Content/site.css" rel="stylesheet" />
 </head>
 
 <body>
