--- a/Lab 2 Events/Starter/faq.html
+++ b/Lab 2 Events/Starter/faq.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>A One Page Faq</title>
-  <link href="../Content/TMMsite.css" rel="stylesheet">
+  <link href="../../Content/site.css" rel="stylesheet">
   <style>
     h2 {
       background: url(/Content/Images/open.png) no-repeat 0 11px;
