--- a/Lab 3 Animation/Solution/animate.html
+++ b/Lab 3 Animation/Solution/animate.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>A Slide In Dashboard</title>
+  <title>A Slide-In Dashboard</title>
   <link href="../../Content/site.css" rel="stylesheet">
   <style>
     #dashboard {
