--- a/Lab 6 Ajax/Starter/MovieData.html
+++ b/Lab 6 Ajax/Starter/MovieData.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Movie data</title>
-  <link href="../Content/site.css" rel="stylesheet">
+  <link href="../../Content/site.css" rel="stylesheet">
 </head>
 
 <body>
