--- a/Lab 5 Forms/Starter/form.html
+++ b/Lab 5 Forms/Starter/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Form Fun</title>
-    <link href="../Content/site.css" rel="stylesheet">
+    <link href="../../Content/site.css" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
