Changed Ajax lab to use IP address locator

--- a/Lab 6 Ajax/Solution/index.html
+++ b/Lab 6 Ajax/Solution/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Movie data</title>
+  <title>IP Location</title>
   <link href="../../Content/site.css" rel="stylesheet">
   <script src="../../Content/jquery.min.js" defer></script>
-  <script src="MovieData.js" defer></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -16,10 +16,11 @@
     </div>
     <div class="content">
       <div class="main">
-        <h1>Movie Information</h1>
-        <input id="movieTitle" placeholder="Movie title" />
-        <button id="getMovie">Get Movie</button>
-        <div class="movieData"></div>
+        <h1>IP Location</h1>
+        <label for="ipAddress">IP Address</label>
+        <input id="ipAddress" />
+        <button id="getLocation">Get Location</button>
+        <div class="outputDiv"></div>
       </div>
     </div>
     <div class="footer">
@@ -29,7 +30,7 @@
       <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">
         <img alt="Creative Commons License" style="border-width: 0" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a>
       <br />
-      <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">HTML5 and JavaScript Labs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://AgileGadgets.com" property="cc:attributionName" rel="cc:attributionURL">AgileGadgets LLC</a> are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+      <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">jQuery Labs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://AgileGadgets.com" property="cc:attributionName" rel="cc:attributionURL">AgileGadgets LLC</a> are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
     </footer>
   </div>
 </body>
