--- a/Lab 6 Ajax/Solution/index.html
+++ b/Lab 6 Ajax/Solution/index.html
@@ -4,35 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <title>IP Location</title>
-  <link href="../../Content/site.css" rel="stylesheet">
-  <script src="../../Content/jquery.min.js" defer></script>
+  <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="../../node_modules/jquery/dist/jquery.min.js" defer></script>
   <script src="main.js" defer></script>
 </head>
 
 <body>
-  <div class="wrapper">
-    <div class="header">
-      <p class="logo">jQuery</p>
-    </div>
-    <div class="content">
-      <div class="main">
-        <h1>IP Location</h1>
-        <label for="ipAddress">IP Address</label>
-        <input id="ipAddress" />
-        <button id="getLocation">Get Location</button>
-        <div class="outputDiv"></div>
-      </div>
-    </div>
-    <div class="footer">
-      <p>jQuery</p>
-    </div>
-    <footer>
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">
+  <header>
+    <h1>jQuery</h1>
+  </header>
+  <main>
+    <h1>IP Location</h1>
+    <label for="ipAddress">IP Address</label>
+    <input id="ipAddress" />
+    <button id="getLocation">Get Location</button>
+    <div class="outputDiv"></div>
+  </main>
+  <footer>
+    <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">
         <img alt="Creative Commons License" style="border-width: 0" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a>
-      <br />
-      <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">jQuery Labs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://AgileGadgets.com" property="cc:attributionName" rel="cc:attributionURL">AgileGadgets LLC</a> are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
-    </footer>
-  </div>
+    <br />
+    <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">jQuery Labs</span> by <a xmlns:cc="http://creativecommons.org/ns#"
+      href="http://AgileGadgets.com" property="cc:attributionName" rel="cc:attributionURL">AgileGadgets LLC</a> are licensed
+    under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+  </footer>
 </body>
 
 </html>
